<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="171dp"
        android:layout_height="189dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/rb14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb1_name"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rb18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb2_name"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb3_name"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb4_name"
            android:textSize="24sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="62dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="203dp"
        android:layout_height="192dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@+id/radioGroup"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/rbYesil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/green"
            android:text="@string/rbColor1_name" />

        <RadioButton
            android:id="@+id/rbMor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/purple"
            android:text="@string/rbColor2_name" />

        <RadioButton
            android:id="@+id/rbKirmizi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/red"
            android:text="@string/rbColor3_name" />

        <RadioButton
            android:id="@+id/rbMavi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/blue"
            android:text="@string/rbColor4_name" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="100dp"
        android:text="Sayfaya Geç"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>